--- a/index.html
+++ b/index.html
@@ -69,47 +69,71 @@
     <section class="slider-section">
         <div class="slider client-patner">
             <div class="owl-carousel owl-theme clients-carousel">
-                <div class="item box"><img alt="client logo" class="client-img" src="./Images/pather-logo1.png">
+                <div class="item box"><img alt="client logo" class="client-img"
+                        src="./new-images/pather-logo9.png">
                 </div>
-                <div class="item box"><img alt="client logo" class="client-img" src="./Images/pather-logo2.png">
+                <div class="item box"><img alt="client logo" class="client-img"
+                        src="./new-images/pather-logo10.png">
                 </div>
-                <div class="item box"><img alt="client logo" class="client-img" src="./Images/pather-logo3.png">
+                <div class="item box"><img alt="client logo" class="client-img"
+                        src="./new-images/pather-logo11.png">
                 </div>
-                <div class="item box"><img alt="client logo" class="client-img" src="./Images/pather-logo4.png">
+                <div class="item box"><img alt="client logo" class="client-img"
+                        src="./new-images/pather-logo12.png">
                 </div>
-                <div class="item box"><img alt="client logo" class="client-img" src="./Images/pather-logo5.png">
+                <div class="item box"><img alt="client logo" class="client-img"
+                        src="./new-images/pather-logo13.png">
                 </div>
-                <div class="item box"><img alt="client logo" class="client-img" src="./Images/pather-logo6.png">
+                <div class="item box"><img alt="client logo" class="client-img"
+                        src="./new-images/pather-logo14.png">
                 </div>
-                <div class="item box"><img alt="client logo" class="client-img" src="./Images/pather-logo7.png">
+                <div class="item box"><img alt="client logo" class="client-img"
+                        src="./new-images/pather-logo15.png">
                 </div>
-                <div class="item box"><img alt="client logo" class="client-img" src="./Images/pather-logo8.png">
+                <div class="item box"><img alt="client logo" class="client-img"
+                        src="./new-images/pather-logo16.png">
                 </div>
-                <div class="item box"><img alt="client logo" class="client-img" src="./Images/pather-logo9.png">
+                <div class="item box"><img alt="client logo" class="client-img"
+                        src="./new-images/pather-logo17.png">
                 </div>
-                <div class="item box"><img alt="client logo" class="client-img" src="./Images/pather-logo10.png">
+                <div class="item box"><img alt="client logo" class="client-img"
+                        src="./new-images/pather-logo18.png">
                 </div>
-                <div class="item box"><img alt="client logo" class="client-img" src="./Images/pather-logo11.png">
+                <div class="item box"><img alt="client logo" class="client-img"
+                        src="./new-images/pather-logo19.png">
                 </div>
-                <div class="item box"><img alt="client logo" class="client-img" src="./Images/pather-logo12.png">
+                <div class="item box"><img alt="client logo" class="client-img"
+                        src="./new-images/pather-logo20.png">
                 </div>
-                <div class="item box"><img alt="client logo" class="client-img" src="./Images/pather-logo13.png">
+                <div class="item box"><img alt="client logo" class="client-img"
+                        src="./new-images/pather-logo4.png">
                 </div>
-                <div class="item box"><img alt="client logo" class="client-img" src="./Images/pather-logo14.png">
+                <div class="item box"><img alt="client logo" class="client-img"
+                        src="./new-images/pather-logo5.png">
                 </div>
-                <div class="item box"><img alt="client logo" class="client-img" src="./Images/pather-logo15.png">
+                <div class="item box"><img alt="client logo" class="client-img"
+                        src="./new-images/pather-logo6.png">
                 </div>
-                <div class="item box"><img alt="client logo" class="client-img" src="./Images/pather-logo16.png">
+                <div class="item box"><img alt="client logo" class="client-img"
+                        src="./new-images/pather-logo7.png">
                 </div>
-                <div class="item box"><img alt="client logo" class="client-img" src="./Images/pather-logo17.png">
+                <div class="item box"><img alt="client logo" class="client-img"
+                        src="./new-images/pather-logo8.png">
                 </div>
-                <div class="item box"><img alt="client logo" class="client-img" src="./Images/pather-logo18.png">
+                <div class="item box"><img alt="client logo" class="client-img"
+                        src="./new-images/pather-logo9.png">
                 </div>
-                <div class="item box"><img alt="client logo" class="client-img" src="./Images/pather-logo19.png">
+                <div class="item box"><img alt="client logo" class="client-img"
+                        src="./new-images/pather-logo10.png">
                 </div>
-                <div class="item box"><img alt="client logo" class="client-img" src="./Images/pather-logo20.png">
+                <div class="item box"><img alt="client logo" class="client-img"
+                        src="./new-images/pather-logo11.png">
                 </div>
+                <div class="item box"><img alt="client logo" class="client-img"
+                    src="./new-images/pather-logo3.png">
             </div>
+            </div>
+        </div>
         </div>
         </div>
     </section>
@@ -166,23 +190,28 @@
             <div class="container-fluid">
                 <div class="row operat-service">
                     <div class="col-lg-6 seroffer-imgsec">
-                        <div id="slider1" class="slider service-logo">
-                            <div><img src="./Images/service-img1.png" alt=""></div>
-                            <div><img src="./Images/service-img2.png" alt=""></div>
-                            <div><img src="./Images/service-img3.png" alt=""></div>
-                            <div><img src="./Images/service-img1.png" alt=""></div>
-                        </div>
+                        <div class="nav_circle">
 
-                        <!-- Slider 2 -->
-                        <div id="slider2" class="slider service-mainimg">
-                            <div><img src="./Images/our-value-img-1.webp" alt=""></div>
-                            <div><img src="./Images/our-value-img-2.webp" alt=""></div>
-                            <div><img src="./Images/our-value-img-3.webp" alt=""></div>
-                            <div><img src="./Images/our-value-img-4.webp" alt=""></div>
+                            <div id="slider1" class="slider service-logo">
+                                <div><img src="./new-images/Operations .png" alt=""></div>
+                                <div><img src="./new-images/Repairs and maintenace.png" alt=""></div>
+                                <div><img src="./new-images/Performance Improvement.png" alt=""></div>
+                                <div><img src="./new-images/Sustainable solutions .png" alt=""></div>
+                            </div>
+
+                            <!-- Slider 2 -->
+                            <div id="slider2" class="slider service-mainimg">
+                                <div><img src="./Images/our-value-img-1.webp" alt=""></div>
+                                <div><img src="./new-images/offrepair and maintenance.png"
+                                        alt=""></div>
+                                <div><img src="./new-images/offPerformance improvement.png"
+                                        alt=""></div>
+                                <div><img src="./new-images/offSustainable solutions.png" alt="">
+                                </div>
+                            </div>
                         </div>
-                        <!--  -->
                         <div class="service-bg">
-                            <img src="./Images/service-bg1.png" alt="">
+                            <img class="servicesCircle_5" id="main_circle" src="./Images/circle.png" alt="circle">
                         </div>
                     </div>
                     <div class="col-lg-6 service-thumbnail">
@@ -283,8 +312,8 @@
                 <h2 class="mb-0 py-3">Our Services</h2>
                 <!-- 1 -->
                 <div class="service-mobinner">
-                    <div class="service-innrimg mb-3">
-                        <img src="./Images/Our-service-img.webp" alt="">
+                    <div class="service-innrimg my-3">
+                        <img src="./new-images/Operations .png" alt="">
                         <p>Operations</p>
                     </div>
                     <div class="service-mobcontent">
@@ -299,8 +328,8 @@
                 </div>
                 <!-- 2 -->
                 <div class="service-mobinner">
-                    <div class="service-innrimg mb-3">
-                        <img src="./Images/Our-service-img2.webp" alt="">
+                    <div class="service-innrimg my-3">
+                        <img src="./new-images/Repairs and maintenace.png" alt="">
                         <p>Repairs and Maintenance</p>
                     </div>
                     <div class="service-mobcontent">
@@ -315,8 +344,8 @@
                 </div>
                 <!-- 3 -->
                 <div class="service-mobinner">
-                    <div class="service-innrimg mb-3">
-                        <img src="./Images/Our-service-img2.webp" alt="">
+                    <div class="service-innrimg my-3">
+                        <img src="./new-images/Performance improvement.png" alt="">
                         <p>Performance Improvement</p>
                     </div>
                     <div class="service-mobcontent">
@@ -331,8 +360,8 @@
                 </div>
                 <!-- 4 -->
                 <div class="service-mobinner">
-                    <div class="service-innrimg mb-3">
-                        <img src="./Images/Our-service-img3.webp" alt="">
+                    <div class="service-innrimg my-3">
+                        <img src="./new-images/Sustainable solutions.png" alt="">
                         <p>Sustainable Solutions</p>
                     </div>
                     <div class="service-mobcontent">
@@ -387,7 +416,7 @@
     <section class="Our-framework facility-frame">
         <div class="container">
             <!--  -->
-            <div class="slider-main-div-1 py-5 service-desktop">
+            <div class="slider-main-div-1 service-desktop">
                 <div class="image-section-1">
                     <img src="Images/AFMS-Framework.webp" alt="Building Image">
                 </div>
@@ -401,25 +430,25 @@
                                 ensure compliance.</p>
                         </div>
                         <div class="slide-1" id="slide-2">
-                            <img src="./Images/frame-img1.png" alt="">
+                            <img src="./new-images/Human Resource Management.png" alt="">
                             <h3>Human Resource Management</h3>
                             <p>Our HR team fosters a supportive environment, recruiting skilled professionals and
                                 nurturing their development.</p>
                         </div>
                         <div class="slide-1" id="slide-3">
-                            <img src="./Images/frame-img1.png" alt="">
+                            <img src="./new-images/Transition Management.png" alt="">
                             <h3>Transition Management</h3>
                             <p>We expertly manage seamless transitions, ensuring minimal disruption and smooth
                                 operational shifts. </p>
                         </div>
                         <div class="slide-1" id="slide-4">
-                            <img src="./Images/frame-img1.png" alt="">
+                            <img src="./new-images/Performance Management.png" alt="">
                             <h3>Performance Management</h3>
                             <p>Our performance management system tracks key metrics and benchmarks, driving continuous
                                 improvement. </p>
                         </div>
                         <div class="slide-1" id="slide-5">
-                            <img src="./Images/frame-img1.png" alt="">
+                            <img src="./new-images/Training Tream.png" alt="">
                             <h3>Training Team</h3>
                             <p>Our dedicated training team equips staff with essential skills and knowledge through
                                 tailored programs.</p>
@@ -437,27 +466,32 @@
                     <h2>Our Framework For Seamless Facility Management</h2>
                     <div class="slider-1 owl-carousel owl-theme">
                         <div class="slide-1" id="slide-1">
+                            <img src="./Images/frame-img1.png" alt="">
                             <h3>Safety Oversight</h3>
                             <p>We maintain rigorous safety standards, regularly auditing procedures and practices to
                                 ensure compliance.</p>
                         </div>
                         <div class="slide-1" id="slide-2">
+                            <img src="./new-images/Human Resource Management.png" alt="">
                             <h3>Human Resource Management</h3>
                             <p>Our HR team fosters a supportive environment, recruiting skilled professionals and
                                 nurturing their development.</p>
                         </div>
                         <div class="slide-1" id="slide-3">
+                            <img src="./new-images/Transition Management.png" alt="">
                             <h3>Transition Management</h3>
                             <p>We expertly manage seamless transitions, ensuring minimal disruption and smooth
                                 operational shifts. </p>
                         </div>
                         <div class="slide-1" id="slide-4">
+                            <img src="./new-images/Transition Management.png" alt="">
                             <h3>Performance Management</h3>
                             <p>Our performance management system tracks key metrics and benchmarks, driving continuous
                                 improvement.
                             </p>
                         </div>
                         <div class="slide-1" id="slide-5">
+                            <img src="./new-images/Training Tream.png" alt="">
                             <h3>Performance Management</h3>
                             <p>Our dedicated training team equips staff with essential skills and knowledge through
                                 tailored programs.</p>
@@ -748,5 +782,9 @@
     <script type="text/javascript" src="./js/script.js"></script>
 
 </body>
+<script>
+
+
+</script>
 
 </html>
