--- a/index.html
+++ b/index.html
@@ -202,11 +202,11 @@
                             <!-- Slider 2 -->
                             <div id="slider2" class="slider service-mainimg">
                                 <div><img src="./Images/our-value-img-1.webp" alt=""></div>
-                                <div><img src="./new-images/offrepair and maintenance.png"
+                                <div><img src="./new-images/oferrepair and maintenance.png"
                                         alt=""></div>
-                                <div><img src="./new-images/offPerformance improvement.png"
+                                <div><img src="./new-images/oferPerformance improvement.png"
                                         alt=""></div>
-                                <div><img src="./new-images/offSustainable solutions.png" alt="">
+                                <div><img src="./new-images/oferSustainable solutions.png" alt="">
                                 </div>
                             </div>
                         </div>
