--- a/Apollo-tech-platform.html
+++ b/Apollo-tech-platform.html
@@ -501,14 +501,9 @@
                             <div class="text-content">
                                 <div class="service-optinalinr">
                                     <ul>
-                                        <li>Incident Management</li>
-                                        <li>Inventory managmenet</li>
-                                        <li>Procuremnet management</li>
-                                        <li>Caliberation Mangement</li>
-                                        <li>Statutory Compliance</li>
-                                        <li>HSE Management</li>
-                                        <li>Custom MIS/ Reports</li>
-                                        <li>Documentation Managemen</li>
+                                        <li>Accessible Across Web</li>
+                                        <li>Mobile</li>
+                                        <li>Tablet Platforms</li>
                                     </ul>
                                 </div>
                                 <p class="common-btn"><a href="">Enquire Now</a></p>
@@ -527,14 +522,19 @@
                 <div class="service-mobinner">
                     <div class="service-innrimg my-3">
                         <img src="./Images/Our-service-img.webp" alt="">
-                        <p>Asset Management </p>
+                        <p>Core Functions</p>
                     </div>
                     <div class="service-mobcontent">
                         <div class="text-content">
                             <ul>
-                                <li>Asset Information</li>
-                                <li>Preventive Maintianance</li>
-                                <li>Stores and inventory mangement</li>
+                                <li>Incident Management</li>
+                                <li>Inventory managmenet</li>
+                                <li>Procuremnet management</li>
+                                <li>Caliberation Mangement</li>
+                                <li>Statutory Compliance</li>
+                                <li>HSE Management</li>
+                                <li>Custom MIS/ Reports</li>
+                                <li>Documentation Managemen</li>
                             </ul>
                             <p class="common-btn"><a href="">Enquire Now</a></p>
                         </div>
@@ -544,12 +544,15 @@
                 <div class="service-mobinner">
                     <div class="service-innrimg my-3">
                         <img src="./Images/Our-service-img2.webp" alt="">
-                        <p>Vendor management</p>
+                        <p>General Functions</p>
                     </div>
                     <div class="service-mobcontent">
                         <div class="text-content">
-                            <p>-</p>
-                            <p class="common-btn"><a href="">Enquire Now</a></p>
+                            <ul>
+                                <li>Accessible Across Web</li>
+                                <li>Mobile</li>
+                                <li>Tablet Platforms</li>
+                            </ul>
                         </div>
                     </div>
                 </div>
@@ -562,29 +565,29 @@
     <section class="Our-framework facility-frame">
         <div class="container">
             <!--  -->
-            <div class="slider-main-div-1 py-5 service-desktop">
+            <div class="slider-main-div-1 my-5 service-desktop">
                 <div class="image-section-1">
                     <img src="Images/tech-framework.webp" alt="Building Image">
                 </div>
                 <div class="text-section-1">
                     <h2>All in one platform to run your facility smoothly (Top Features)</h2>
-                    <div class="framework-slider">
+                    <div class="framework-slider tech-slide">
                         <div class="slide-1" id="slide-1">
-                            <img src="./Images/frame-img1.png" alt="">
+                            <img src="./new-images/Multi-Site Implementations.png" alt="">
                             <h3>Effortless Single or Multi-Site Implementations</h3>
                             <p>Our facility management software allows for straightforward implementations, whether for
                                 a single location or multiple sites. This flexibility ensures that facilities of any
                                 size can benefit from our solutions without extensive setup times or complexities.</p>
                         </div>
                         <div class="slide-1" id="slide-2">
-                            <img src="./Images/frame-img1.png" alt="">
+                            <img src="./new-images/Seamless Integration with IoT Devices.png" alt="">
                             <h3>Seamless Integration with IoT Devices</h3>
                             <p>Leverage the power of IoT with our smart facility management system. This integration
                                 enables real-time monitoring and control, allowing for proactive management of your
                                 facilities and enhancing operational efficiency.</p>
                         </div>
                         <div class="slide-1" id="slide-3">
-                            <img src="./Images/frame-img1.png" alt="">
+                            <img src="./new-images/Energy Forecasting .png" alt="">
                             <h3>Support for Predictive Maintenance and Energy Forecasting</h3>
                             <p>Our software includes features for predictive maintenance and energy predictions, helping
                                 you anticipate issues before they arise. This capability reduces downtime, optimizes
@@ -592,14 +595,14 @@
                                 facility.</p>
                         </div>
                         <div class="slide-1" id="slide-4">
-                            <img src="./Images/frame-img1.png" alt="">
+                            <img src="./new-images/Accessible Across Web, Mobile, and Tablet Platforms.png" alt="">
                             <h3>Accessible Across Web, Mobile, and Tablet Platforms</h3>
                             <p>Access your facility management system anytime, anywhere, through our web, mobile, and
                                 tablet platforms. This multi-device support ensures that facility managers and staff can
                                 stay connected and informed, enabling timely decision-making and response.</p>
                         </div>
                         <div class="slide-1" id="slide-5">
-                            <img src="./Images/frame-img1.png" alt="">
+                            <img src="./new-images/Comprehensive Management of Over 50+ Facility Functions.png" alt="">
                             <h3>Comprehensive Management of Over 50+ Facility Functions</h3>
                             <p>Our solution effortlessly handles more than 50+ facility management functions, from
                                 maintenance scheduling to compliance tracking. This comprehensive approach simplifies
@@ -607,14 +610,14 @@
                                 day-to-day tasks.</p>
                         </div>
                         <div class="slide-1" id="slide-6">
-                            <img src="./Images/frame-img1.png" alt="">
-                            <h3>Comprehensive Compliance Reporting</h3>
+                            <img src="./new-images/Complete Compliance Reporting.png" alt="">
+                            <h3>Complete Compliance Reporting</h3>
                             <p>Our software includes built-in compliance-related reports that ensure adherence to
                                 industry regulations and standards. This feature helps facility managers maintain safety
                                 and environmental protocols while minimizing risk and liability.</p>
                         </div>
                         <div class="slide-1" id="slide-7">
-                            <img src="./Images/frame-img1.png" alt="">
+                            <img src="./new-images/Interactive Dashboards and Graphical Insights.png" alt="">
                             <h3>Interactive Dashboards and Graphical Insights</h3>
                             <p>The software provides interactive dashboards with graphs and visual analytics, enabling
                                 quick understanding of key performance metrics. Stakeholders can easily interpret data
@@ -634,21 +637,21 @@
                     <h2>All in one platform to run your facility smoothly (Top Features)</h2>
                     <div class="slider-1 owl-carousel owl-theme">
                         <div class="slide-1" id="slide-1">
-                            <img src="./Images/frame-img1.png" alt="">
+                            <img src="./new-images/Multi-Site Implementations.png" alt="">
                             <h3>Effortless Single or Multi-Site Implementations</h3>
                             <p>Our facility management software allows for straightforward implementations, whether for
                                 a single location or multiple sites. This flexibility ensures that facilities of any
                                 size can benefit from our solutions without extensive setup times or complexities.</p>
                         </div>
                         <div class="slide-1" id="slide-2">
-                            <img src="./Images/frame-img1.png" alt="">
+                            <img src="./new-images/Seamless Integration with IoT Devices.png" alt="">
                             <h3>Seamless Integration with IoT Devices</h3>
                             <p>Leverage the power of IoT with our smart facility management system. This integration
                                 enables real-time monitoring and control, allowing for proactive management of your
                                 facilities and enhancing operational efficiency.</p>
                         </div>
                         <div class="slide-1" id="slide-3">
-                            <img src="./Images/frame-img1.png" alt="">
+                            <img src="./new-images/Energy Forecasting .png" alt="">
                             <h3>Support for Predictive Maintenance and Energy Forecasting</h3>
                             <p>Our software includes features for predictive maintenance and energy predictions, helping
                                 you anticipate issues before they arise. This capability reduces downtime, optimizes
@@ -656,14 +659,14 @@
                                 facility.</p>
                         </div>
                         <div class="slide-1" id="slide-4">
-                            <img src="./Images/frame-img1.png" alt="">
+                            <img src="./new-images/Accessible Across Web, Mobile, and Tablet Platforms.png" alt="">
                             <h3>Accessible Across Web, Mobile, and Tablet Platforms</h3>
                             <p>Access your facility management system anytime, anywhere, through our web, mobile, and
                                 tablet platforms. This multi-device support ensures that facility managers and staff can
                                 stay connected and informed, enabling timely decision-making and response.</p>
                         </div>
                         <div class="slide-1" id="slide-5">
-                            <img src="./Images/frame-img1.png" alt="">
+                            <img src="./new-images/Comprehensive Management of Over 50+ Facility Functions.png" alt="">
                             <h3>Comprehensive Management of Over 50+ Facility Functions</h3>
                             <p>Our solution effortlessly handles more than 50+ facility management functions, from
                                 maintenance scheduling to compliance tracking. This comprehensive approach simplifies
@@ -671,14 +674,14 @@
                                 day-to-day tasks.</p>
                         </div>
                         <div class="slide-1" id="slide-6">
-                            <img src="./Images/frame-img1.png" alt="">
-                            <h3>Comprehensive Compliance Reporting</h3>
+                            <img src="./new-images/Complete Compliance Reporting.png" alt="">
+                            <h3>Complete Compliance Reporting</h3>
                             <p>Our software includes built-in compliance-related reports that ensure adherence to
                                 industry regulations and standards. This feature helps facility managers maintain safety
                                 and environmental protocols while minimizing risk and liability.</p>
                         </div>
                         <div class="slide-1" id="slide-7">
-                            <img src="./Images/frame-img1.png" alt="">
+                            <img src="./new-images/Interactive Dashboards and Graphical Insights.png" alt="">
                             <h3>Interactive Dashboards and Graphical Insights</h3>
                             <p>The software provides interactive dashboards with graphs and visual analytics, enabling
                                 quick understanding of key performance metrics. Stakeholders can easily interpret data
