--- a/Blog-listing.html
+++ b/Blog-listing.html
@@ -258,6 +258,8 @@
             <a href="#">Enquire Now</a>
         </div>
     </section>
+
+    
     <!-- footer section start -->
     <footer>
         <div class="container">
@@ -321,3 +323,32 @@
 </body>
 
 </html>
+
+<style>
+    h4{
+	margin-bottom: 10px;
+	font-size: 24px;
+	color: white;
+}
+input{
+	width: 100%;
+	padding: 10px;
+	margin-bottom: 10px;
+}
+textarea{
+	width: 100%;
+	padding: 10px;
+}
+#submit{
+	border: none;
+	background-color: orangered;
+	color: white;
+	width: 200px;
+	margin-top: 10px;
+	border-radius: 5px;
+}
+#submit:hover{
+	background-color: #333333;
+}
+
+</style>
