--- a/iot-services.html
+++ b/iot-services.html
@@ -202,7 +202,7 @@
                                 <p class="common-btn"><a href="">Enquire Now</a></p>
                             </div>
                             <div class="image-content">
-                                <img src="./Images/iot-monitor.webp" alt="Repairs Image">
+                                <img src="./new-images/HVAC Temperature Monitoring.png" alt="Repairs Image">
                             </div>
                         </div>
                     </div>
@@ -215,7 +215,7 @@
                                 <p class="common-btn"><a href="">Enquire Now</a></p>
                             </div>
                             <div class="image-content">
-                                <img src="./Images/iot-monitor.webp" alt="Improvement Image">
+                                <img src="./new-images/Water Management.png" alt="Improvement Image">
                             </div>
                         </div>
                     </div>
@@ -228,7 +228,7 @@
                                 <p class="common-btn"><a href="">Enquire Now</a></p>
                             </div>
                             <div class="image-content">
-                                <img src="./Images/iot-monitor.webp" alt="Sustainability Image">
+                                <img src="./new-images/Lighting Management.png" alt="Sustainability Image">
                             </div>
                         </div>
                     </div>
@@ -254,7 +254,7 @@
                 <!-- 2 -->
                 <div class="service-mobinner">
                     <div class="service-innrimg my-3">
-                        <img src="./Images/iot-monitor.webp" alt="">
+                        <img src="./new-images/HVAC Temperature Monitoring.png" alt="Repairs Image">
                         <p>HVAC Temperature Monitoring</p>
                     </div>
                     <div class="service-mobcontent">
@@ -268,7 +268,7 @@
                 <!-- 3 -->
                 <div class="service-mobinner">
                     <div class="service-innrimg my-3">
-                        <img src="./Images/iot-monitor.webp" alt="">
+                        <img src="./new-images/Water Management.png" alt="Improvement Image">
                         <p>Water Management</p>
                     </div>
                     <div class="service-mobcontent">
@@ -282,7 +282,7 @@
                 <!-- 4 -->
                 <div class="service-mobinner">
                     <div class="service-innrimg my-3">
-                        <img src="./Images/iot-monitor.webp" alt="">
+                        <img src="./new-images/Lighting Management.png" alt="Sustainability Image">
                         <p>Lighting Management</p>
                     </div>
                     <div class="service-mobcontent">
