--- a/about.html
+++ b/about.html
@@ -125,7 +125,7 @@
                     </div>
                 </div>
             </div>
-            <div class="milesone-main viewtext">
+            <div class="milesone-main mt-5 viewtext">
                 <h2 class="text-center">Milestones</h2>
                 <p style="color: #CFC8C8; " class="mile">Every milestone we achieve reflects our commitment to
                     empowering
