--- a/energy-resources.html
+++ b/energy-resources.html
@@ -178,7 +178,7 @@
                                 <p class="common-btn"><a href="">Enquire Now</a></p>
                             </div>
                             <div class="image-content">
-                                <img src="./Images/resource-solution.webp" alt="Repairs Image">
+                                <img src="./new-images/Solar and EV Solutions .png" alt="Repairs Image">
                             </div>
                         </div>
                     </div>
@@ -255,39 +255,42 @@
                 </div>
                 <div class="text-section-1">
                     <h2>Our Framework For Seamless Facility Management</h2>
-                    <div class="framework-slider">
+                    <div class="framework-slider iot-frame">
                         <div class="slide-1" id="slide-1">
-                            <img src="./Images/frame-img1.png" alt="">
+                            <img src="./new-images/Design.png" alt="">
                             <h5>Step 1</h5>
-                            <h3>Enable IOT on your Devices</h3>
-                            <p>Conduct a thorough audit of your HVAC system to identify existing leaks and
-                                inefficiencies.</p>
-                            <p>Generate a detailed report outlining the leakage levels and areas needing attention.
-                            </p>
+                            <h3>Design</h3>
+                            <p>We deliver a detailed 3D report and shadow analysis to optimize the placement and
+                                efficiency of solar installations, ensuring maximum energy capture.</p>
                         </div>
                         <div class="slide-1" id="slide-2">
-                            <img src="./Images/frame-img1.png" alt="">
+                            <img src="./new-images/Procurement.png" alt="">
                             <h5>Step 2</h5>
-                            <h3>Connect to Network</h3>
-                            <p>Cover all duct openings except for one to create a controlled environment.</p>
-                            <p>Set up the HVAC duct sealing equipment.</p>
+                            <h3>Procurement</h3>
+                            <p>Our team carefully sources high-quality materials and equipment to ensure the longevity
+                                and performance of your energy systems.</p>
                         </div>
                         <div class="slide-1" id="slide-3">
-                            <img src="./Images/frame-img1.png" alt="">
+                            <img src="./new-images/Supply.png" alt="">
                             <h5>Step 3</h5>
-                            <h3>Cloud Management</h3>
-                            <p>The sealing machine pressurizes the duct interior, creating the necessary conditions
-                                for effective sealing.</p>
-                            <p>Releases mist containing sealant particles into the duct system.</p>
+                            <h3>Supply</h3>
+                            <p>We manage all logistics to deliver the necessary components to your site efficiently and
+                                on schedule.
+                            </p>
                         </div>
                         <div class="slide-1" id="slide-4">
-                            <img src="./Images/frame-img1.png" alt="">
+                            <img src="./new-images/installation.png" alt="">
                             <h5>Step 4</h5>
-                            <h3>Dashboard and Report Set up as User Requirements</h3>
-                            <p>Sealant particles flow inside the ducts and gradually accumulate near leakages and
-                                seal any openings.</p>
-                            <p>The machine monitors the sealing process in real time to ensure optimal coverage and
-                                effectiveness.</p>
+                            <h3>Installation</h3>
+                            <p>Our experienced technicians execute the installation process with minimal disruption to
+                                your facility operations, ensuring adherence to industry standards.</p>
+                        </div>
+                        <div class="slide-1" id="slide-5">
+                            <img src="./new-images/Testing.png" alt="">
+                            <h5>Step 4</h5>
+                            <h3>Testing</h3>
+                            <p>Comprehensive testing is conducted to guarantee that all systems operate optimally and
+                                meet all safety standards.</p>
                         </div>
                     </div>
                 </div>
