--- a/iot-services.html
+++ b/iot-services.html
@@ -301,13 +301,13 @@
     <section class="Our-framework facility-frame">
         <div class="container">
             <!--  -->
-            <div class="slider-main-div-1 service-desktop">
+            <div class="slider-main-div-1 my-5 service-desktop">
                 <div class="image-section-1">
                     <img class="iot-frame" src="Images/iot-works.webp" alt="Building Image">
                 </div>
                 <div class="text-section-1">
                     <h2>Our Framework For Seamless Facility Management</h2>
-                    <div class="framework-slider">
+                    <div class="framework-slider iot-frame">
                         <div class="slide-1" id="slide-1">
                             <img src="./Images/frame-img1.png" alt="">
                             <h5>Step 1</h5>
